RESOLVED FIXED25408
[Gtk] gtkdrawing update
https://bugs.webkit.org/show_bug.cgi?id=25408
Summary [Gtk] gtkdrawing update
Jan Alonzo
Reported 2009-04-26 02:04:08 PDT
The following patch updates gtkdrawing.h and gtk2drawing.c to the latest copy from mozilla. gtk2drawing.c revisions: http://hg.mozilla.org/mozilla-central/log/b552b1ef8aa0/widget/src/gtk2/gtk2drawing.c gtkdrawing.h revisions: http://hg.mozilla.org/mozilla-central/log/b552b1ef8aa0/widget/src/gtk2/gtkdrawing.h The only change I did was to change NS_ASSERTION to WTF::ASSERT.
Attachments
moz gtkdrawing update (17.96 KB, patch)
2009-04-26 02:04 PDT, Jan Alonzo
gustavo: review+
Jan Alonzo
Comment 1 2009-04-26 02:04:40 PDT
Created attachment 29802 [details] moz gtkdrawing update
Gustavo Noronha (kov)
Comment 2 2009-04-26 10:20:20 PDT
Comment on attachment 29802 [details] moz gtkdrawing update I trust you have tested this, so I'll say r=me.
Jan Alonzo
Comment 3 2009-04-27 08:10:49 PDT
Landed in r42892
Note You need to log in before you can comment on or make changes to this bug.